[project]
name = "job-search"
version = "0.1.0"
description = "agent for job search"
authors = [
    {name = "Shailendra Jain",email = "shailendrajain28@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "openapi (>=2.0.0,<3.0.0)",
    "pypdf (>=5.4.0,<6.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
